--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 <body>
    <h1>О себе</h1>
+   <h2>Предыстория</h2>
+   <p>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Пунктуация, имени рыбного?
+      Снова города продолжил это эта прямо раз которое использовало, предупредила единственное, последний языкового
+      вершину, свой однажды строчка!</p>
    <p>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Пунктуация, имени рыбного?
       Снова города продолжил это эта прямо раз которое использовало, предупредила единственное, последний языкового
       вершину, свой однажды строчка!</p>
