--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-   <h1>О себе</h1>
+   <h1>О себе подробно</h1>
    <h2>Предыстория</h2>
    <p>Далеко-далеко за словесными, горами в стране гласных и согласных живут рыбные тексты. Пунктуация, имени рыбного?
       Снова города продолжил это эта прямо раз которое использовало, предупредила единственное, последний языкового
